--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "repository": "johnotander/ruled-app",
   "license": "MIT",
   "dependencies": {
-    "cxs": "^2.0.0",
+    "axs": "^1.0.0-b2",
     "next": "^1.1.1",
     "ruled": "^1.0.1"
   },
